fix: rootLayout overflow-y auto

--- a/src/pages/layouts/rootLayout/ui/rootLayout.module.scss
+++ b/src/pages/layouts/rootLayout/ui/rootLayout.module.scss
@@ -4,7 +4,7 @@
     max-width: 500px;
     margin: 0 auto;
     padding: 20px;
-    overflow: auto !important;
+    overflow-y: auto !important;
 
     @media (max-width: 380px) {
         padding: 15px;
